force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Place holder for UAT and feedback from testing, business and vendors in order to generate discussion and make decisions before any action is taken.</description>
    <label>Feedback</label>
    <nameField>
        <label>Feedback</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>