force-app/main/default/objects/Feedback__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This person is currently responsible for the resolution of this record.</description>
    <inlineHelpText>Please select a user. The feedback should be asigned to the Business Analyst working with the project if there are any questions of ownership.</inlineHelpText>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>