force-app/main/default/objects/Feedback__c/fields/Detailed_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If feedback is directly related to a detailed requirement, please provide a link to it.</description>
    <label>Detailed Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>