force-app/main/default/objects/Feedback__c/fields/Feedback_Details__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Details__c</fullName>
    <description>Describe in full the findings in the interface,</description>
    <label>Feedback Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>