force-app/main/default/objects/Feedback__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Required when the status of the feedback is changed to Resolved.</description>
    <label>Resolution Notes</label>
    <type>TextArea</type>
</CustomField>