force-app/main/default/objects/Feedback__c/fields/Resolve_By__c.field-meta.xml
<CustomField>
    <fullName>Resolve_By__c</fullName>
    <description>The date by which a resolution is expected. Required when the status is changed to Open.</description>
    <label>Resolve By</label>
    <type>Date</type>
</CustomField>