force-app/main/default/objects/Feedback__c/fields/Resources_Involved__c.field-meta.xml
<CustomField>
    <fullName>Resources_Involved__c</fullName>
    <description>If known, select the potential resources involved/needed to resolve the feedback item.</description>
    <label>Resources Involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RWSC</fullName>
                <default>true</default>
                <label>RWSC</label>
            </value>
            <value>
                <fullName>Intershop</fullName>
            </value>
            <value>
                <fullName>Micros</fullName>
            </value>
            <value>
                <fullName>Vertex</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>