force-app/main/default/objects/Feedback__c/validationRules/Due_Date_Required_when_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Required_when_Open</fullName>
    <active>true</active>
    <description>Add a due date after changing the record status to open.</description>
    <errorConditionFormula>AND (ISPICKVAL(Status__c , &quot;Open&quot;), ISBLANK(Resolve_By__c ))</errorConditionFormula>
    <errorDisplayField>Resolve_By__c</errorDisplayField>
    <errorMessage>Please enter an expected date for the resolution of this feedback record.</errorMessage>
</ValidationRule>