force-app/main/default/objects/Feedback__c/validationRules/Priority_Required_when_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_Required_when_Open</fullName>
    <active>true</active>
    <description>Add a priority after changing the record status to open.</description>
    <errorConditionFormula>AND (ISPICKVAL(Status__c , &quot;Open&quot;), ISPICKVAL( Priority__c, &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Priority__c</errorDisplayField>
    <errorMessage>Please enter a priority for the resolution of this feedback record.</errorMessage>
</ValidationRule>