force-app/main/default/objects/Feedback__c/validationRules/Resolution_Notes_Required_when_Resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Notes_Required_when_Resolved</fullName>
    <active>true</active>
    <description>Add resolution notes when the feedback item is Resolved.</description>
    <errorConditionFormula>AND (ISPICKVAL(Status__c , &quot;Resolved&quot;),  ISBLANK(Resolution_Notes__c))</errorConditionFormula>
    <errorDisplayField>Resolution_Notes__c</errorDisplayField>
    <errorMessage>Please enter notes for the resolution of this feedback record.</errorMessage>
</ValidationRule>