force-app/main/default/objects/Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Detailed_Requirement__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Resolve_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>