force-app/main/default/objects/Feedback__c/listViews/Industrial_Account_Solution_Feedback.listView-meta.xml
<ListView>
    <fullName>Industrial_Account_Solution_Feedback</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_to__c</columns>
    <columns>Detailed_Requirement__c</columns>
    <columns>Priority__c</columns>
    <columns>Resolve_By__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Industrial Accounts Solution</value>
    </filters>
    <label>Industrial Account Solution Feedback</label>
    <sharedTo>
        <group>Industrial_Accounts_Solution_Intershop</group>
        <group>Industrial_Accounts_Solution_RWSC_User</group>
    </sharedTo>
</ListView>